[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "calendra"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Worldwide holidays and working days helper and toolkit."
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"python-dateutil",
	"lunardate",
	'backports.zoneinfo;python_version<"3.9"',
	'tzdata;platform_system=="Windows"',
	"convertdate",
	"pyluach",
	'importlib_metadata; python_version < "3.8"',
	"more_itertools",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/jaraco/calendra"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 3.5, !=3.7.3",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	# disabled because there are 88 failures
	# pytest-mypy; \
	# workaround for jaraco/skeleton#22
	# python_implementation != "PyPy"
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"pygments",
	"pytest-cov",
	"pytest-pep8",
	"pandas",
	"jaraco.test >= 3.2.0",
	"freezegun",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]
astronomy = [
	"skyfield",
	"skyfield-data",
	"tqdm",
]

[tool.setuptools_scm]
