[metadata]
name = calendra
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Worldwide holidays and working days helper and toolkit.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/jaraco/calendra
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	python-dateutil
	lunardate
    backports.zoneinfo;python_version<"3.9"
    tzdata;platform_system=="Windows"
	convertdate
	pyluach
	importlib_metadata; python_version < "3.8"
	more_itertools

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 2.4
	pytest-cov
	# disabled because there are 88 failures
	# pytest-mypy; \
		# workaround for jaraco/skeleton#22
	#	python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pygments
	pytest-cov
	pytest-pep8
	pandas
	jaraco.test >= 3.2.0
	freezegun

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

astronomy =
  skyfield
  skyfield-data
  tqdm

[options.entry_points]
